=== 2016-07-04
* Enhancements
  * Can now find span by :text
  * Can now find button by :value
  * Added #forward and #back methods to druid object
  * Added #right_click and #double_click methods to Element
=== 2016-07-03
* Enhancements
  * Will call callback method #initialize_page method if it exists on a page object
  * Renamed all *_<element_type> methods to *_element. Created alias for backward compatibility
  * Delegating unknown method calls on Element to the driver element object

=== 2016-06-30
* Enhancements
  * Can now find a TableCell by its' text
  * If we receive an error calling #attach_to_window, wait one second and try again
=== 2016-06-29
* Enhancements
  * Added ability to locate div by the contained text
  * Added #attach_to_window so a page object can operate on another window
  * Added #send_keys to Druid::Elements::Element
  * Added #refresh to page object
  * Added #clear method to Element
  * Added #in_frame to Accessors to handle frame and iframe access
=== 2016-06-21
* Enhancements
  * Handling popups
    * Added #alert to page object to override default alert popup behavior
    * Added #confirm to page object to override default confirm popup behavior
    * Added #prompt to page object to override default prompt popup behavior
=== 2016-06-20
* Enhancements
  * Async handling
    * Added #wait_until to page object to support for async events at page level
    * Added the following methods to Druid::Elements::Element
      * #when_present
      * #when_visible
      * #when_not_visible
      * #wait_until
=== Version 1.0.0
=== 2016-06-04
* Enhancements
  * Support for using multiple identifiers when locating the following element:
    * Link
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * CheckBox
    * RadioButton
    * Button
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * ListItem
    * UnorderedList
    * OrderedList

  * Support name for identification across all elements in Watir